phase-2/day-13/manifests/02-deploy-web-apple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-web
  namespace: ingress-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple-web
  template:
    metadata:
      labels:
        app: apple-web
    spec:
      containers:
      - name: apple-container
        image: hashicorp/http-echo:latest
        args:
        - "-text=apple"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: apple-service
  namespace: ingress-lab
spec:
  selector:
    app: apple-web
  ports:
  - port: 5678
    targetPort: 5678
