phase-2/day-13/manifests/03-deploy-web-banana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-web
  namespace: ingress-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banana-web
  template:
    metadata:
      labels:
        app: banana-web
    spec:
      containers:
      - name: banana-container
        image: hashicorp/http-echo:latest
        args:
        - "-text=banana"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: banana-service
  namespace: ingress-lab
spec:
  selector:
    app: banana-web
  ports:
  - port: 5678
    targetPort: 5678
